--- a/core/dbio/templates/bigquery.yaml
+++ b/core/dbio/templates/bigquery.yaml
@@ -37,6 +37,33 @@ core:
         {sql}
       )
 
+  # BigQuery supports all 4 merge strategies
+  merge_insert: |
+    INSERT INTO {tgt_table} ({insert_fields})
+    SELECT {src_fields} FROM {src_table} src
+
+  merge_update: |
+    UPDATE {tgt_table} tgt
+    SET {set_fields}
+    FROM {src_table} src
+    WHERE {src_tgt_pk_equal}
+
+  merge_update_insert: |
+    MERGE INTO {tgt_table} tgt
+    USING (SELECT {src_fields} FROM {src_table}) src
+    ON ({src_tgt_pk_equal})
+    WHEN MATCHED THEN UPDATE SET {set_fields}
+    WHEN NOT MATCHED THEN INSERT ({insert_fields}) VALUES ({src_insert_fields})
+
+  merge_delete_insert: |
+    DELETE FROM {tgt_table} tgt
+    WHERE EXISTS (
+      SELECT 1 FROM {src_table} src
+      WHERE {src_tgt_pk_equal}
+    );
+    INSERT INTO {tgt_table} ({insert_fields})
+    SELECT {src_fields} FROM {src_table} src
+
 metadata:
 
   current_database:
@@ -408,6 +435,8 @@ function:
   checksum_json: "length(replace(nullif(to_json_string({field}), 'null'), ' ', ''))"
 
 variable:
+  # BigQuery default is delete_insert as it's more reliable
+  default_merge_strategy: delete_insert
   tmp_folder: /tmp
   bind_string: "?"
   quote_char: '`'
